--- a/Public/index.html
+++ b/Public/index.html
@@ -6,8 +6,10 @@
     </head>
  
     <body>
-        <script src="//cdn.jsdelivr.net/npm/phaser@3.0.0/dist/phaser.min.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
         <script src="js/principal.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
     </body>
  
 </html>
