--- a/Public/index.html
+++ b/Public/index.html
@@ -3,13 +3,17 @@
  
     <head>
         <meta charset="utf-8">
-    </head>
- 
-    <body>
         <script src="//cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.js"></script>
         <script src="//cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser.min.js"></script>
         <script src="js/principal.js"></script>
         <script src="/socket.io/socket.io.js"></script>
+    </head>
+ 
+    <body>
+        <div style="width: 100%; padding: 70px 400px">
+                <div id="bloque_juego"></div>
+        </div>
+        
     </body>
  
 </html>
